Yellow_Belt/Week 2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:09:49 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
Info: Nothing to build for Unit_testing_polindrom_func
17:10:41 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:11:41 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:19:45 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
..\src\Unit_testing_polindrom_func.cpp: In function 'void TestIsPalindrom()':
..\src\Unit_testing_polindrom_func.cpp:106:14: error: 'IsPalindrom' was not declared in this scope
  AssertEqual(IsPalindrom(""), true, "1");
              ^~~~~~~~~~~
..\src\Unit_testing_polindrom_func.cpp:106:14: note: suggested alternative: 'TestIsPalindrom'
  AssertEqual(IsPalindrom(""), true, "1");
              ^~~~~~~~~~~
              TestIsPalindrom
17:19:56 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:25:50 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:28:17 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:33:33 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
..\src\Unit_testing_polindrom_func.cpp: In function 'void TestIsPalindrom()':
..\src\Unit_testing_polindrom_func.cpp:106:14: error: 'IsPalindrom' was not declared in this scope
  AssertEqual(IsPalindrom(""), true, "1");
              ^~~~~~~~~~~
..\src\Unit_testing_polindrom_func.cpp:106:14: note: suggested alternative: 'TestIsPalindrom'
  AssertEqual(IsPalindrom(""), true, "1");
              ^~~~~~~~~~~
              TestIsPalindrom
17:33:45 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:40:30 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:55:10 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:55:32 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:55:46 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:56:24 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
17:59:33 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
18:04:45 **** Incremental Build of configuration Debug for project Unit_testing_polindrom_func ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Unit_testing_polindrom_func.o" "..\\src\\Unit_testing_polindrom_func.cpp" 
g++ -o Unit_testing_polindrom_func.exe "src\\Unit_testing_polindrom_func.o" 
